# MultiFunctionalClock

./: CMakeLists.txt  README.md  compiler_flags.cmake
App/Inc/: i2c.h  main.h
App/Src/: i2c.c  main.c  stm32l4xx_it.c
Doc/: nowe_uwagi.txt
Libs/CMSIS/Device/ST/STM32L4xx/Include/: stm32l431xx.h
Libs/MyLibs/Low-Level/GPIO/Inc/: gpio.h  gpio_types.h
Libs/MyLibs/Low-Level/GPIO/Src/: gpio.c
Libs/MyLibs/Other/BB/Inc/: BB.h
Libs/STM32L4xx_HAL_Driver/Inc/: stm32l4xx_hal_rcc.h  stm32l4xx_hal_rcc_ex.h
Test/: CMakeLists.txt
Test/Others/: GPIO_TEST.c  GPIO_TEST.h
Test/Unit/: CMakeLists.txt
Test/Unit/Libs/: CMakeLists.txt
Test/Unit/Libs/MyLibs/: CMakeLists.txt
Test/Unit/Libs/MyLibs/GPIO/: CMakeLists.txt
Test/Unit/Libs/MyLibs/Low-Level/: CMakeLists.txt
Test/Unit/Libs/MyLibs/Low-Level/GPIO/: CMakeLists.txt  gpio_test.cpp
Test/Unit/Libs/MyLibs/Low-Level/I2C/: CMakeLists.txt  i2c_test.cpp
